Fixed: z-index in different sections

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -31,7 +31,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1000;
+  z-index: 5;
   margin-bottom: 20px;
   font-family: "Lexend", Fallback, sans-serif;
   font-size: 1rem;
